# url-cleaner

./: .env  .gitignore  Cargo.toml  LICENSE.md  README.md  benchmark.sh  benchmarks.md  build.rs  bundled_cleaner.md  cache.sqlite  clipboard.sh  command-test-config.json  config.json  default-cleaner.json  default-config.json  default-rules.json  default_cleaner.md  diesel.toml  empty-cache.sqlite  format.md  get-tlds.sh  glob-test-config.json  network-tests.json  regex-test-config.json  tc.json  tests.json  tests.sh  thinking.rs  threat-model.md  wasm-test.html
better-url/: Cargo.toml  README.md  build.rs  test.txt
better-url/benches/main/: main.rs  segments.rs
better-url/src/: better_host.rs  better_url.rs  errors.rs  host.rs  lib.rs  parse.rs  position.rs  query.rs  ref_host.rs  util.rs
better-url/src/better_url/: domain_impl.rs  host_details.rs  mod.rs  path_impl.rs  query_impl.rs
better-url/src/details/: mod.rs  path.rs  query.rs  url.rs
better-url/src/errors/: fragment.rs  generic.rs  host.rs  host_port.rs  mod.rs  path.rs  port.rs  query.rs  scheme.rs  url.rs  userinfo.rs
better-url/src/host/: cow.rs  details.rs  mod.rs  ref.rs
better-url/src/host_details/: domain.rs  ip.rs  mod.rs
better-url/src/parts/: mod.rs  password.rs  scheme.rs  username.rs
better-url/src/path/: decode.rs  encode.rs  mod.rs  raw_segment.rs
better-url/src/query/: decode.rs  encode.rs  mod.rs  raw_segment.rs
better-url/src/tests/: idna.rs  mod.rs  parser.rs  setters.rs
better-url/src/url/: fragment.rs  mod.rs  password.rs  path.rs  path_impl.rs  port.rs  query.rs  query_impl.rs  scheme.rs  userinfo.rs  username.rs
better-url/src/util/: ascii_set.rs  cow_bytes_str.rs  cow_str_ext.rs  fragment.rs  host.rs  indexing.rs  ipv4.rs  iterator_ext.rs  macros.rs  mod.rs  normalizer.rs  parsing.rs  percent_encoding.rs  query.rs  scheme.rs  segments.rs  split.rs  str_ext.rs
cli/: Cargo.toml  README.md
cli/benchmarking/: benchmark.sh  benchmark_offlines.sh  benchmark_tests.sh  command.sh
cli/src/: main.rs
discord/: Cargo.toml  README.md
discord-app/: Cargo.toml  README.md
discord-app/src/: clean_url.rs  clean_urls.rs  help.rs  main.rs
discord/src/: clean_url.rs  clean_urls.rs  help.rs  main.rs  parse.rs  ready_handler.rs
engine/: Cargo.toml  README.md  build.rs  bundled-cleaner.json  default-cleaner.json
engine/benches/main/: caching.rs  default_cleaner.rs  host_details.rs  main.rs
engine/src/: debug.rs  glue.rs  helpers.rs  lib.rs  partitioning.rs  set.rs  task_cow.rs  testing.rs  types.rs  unthreader.rs  util.rs
engine/src/base64/: alphabet.rs  decode_padding_mode.rs  mod.rs
engine/src/cache/: config.rs  inner.rs  location.rs  mod.rs
engine/src/cleaner/: action.rs  bundled-cleaner.json  call_args.rs  char_matcher.rs  condition.rs  docs.rs  function_call.rs  functions.rs  mod.rs  params.rs  params_diff.rs  profiled.rs  profiles_config.rs  string_location.rs  string_matcher.rs  string_modification.rs  string_source.rs
engine/src/components/: action.rs  char_matcher.rs  condition.rs  host_part.rs  map.rs  mod.rs  partitioning.rs  query_param_selector.rs  set.rs  string_location.rs  string_matcher.rs  string_modification.rs  string_source.rs  url_part.rs
engine/src/data/: mod.rs  radix.rs
engine/src/data_structures/: map.rs  mod.rs  named_partitioning.rs  set.rs
engine/src/errors/: cache.rs  http.rs  job.rs  mod.rs  parsing.rs  regex.rs
engine/src/function/: args.rs  call.rs  functions.rs  mod.rs
engine/src/glue/: base64.rs  caching.rs  command.rs  http.rs  http_client_config.rs  json.rs  mod.rs  percent_encoding.rs  proxy.rs  regex.rs  url_position.rs
engine/src/helpers/: profiles.rs
engine/src/http/: client.rs  maybe_client.rs  mod.rs  proxy.rs  request.rs  response.rs
engine/src/job/: auth.rs  job_config.rs  job_context.rs  job_into_iterator.rs  mod.rs  secrets.rs  small_job.rs  small_job_into_iterator.rs  task.rs  task_config.rs  task_context.rs  task_state.rs  unthreader.rs
engine/src/parsing/: get_html_attribute.rs  get_html_char_ref.rs  get_js_string_literal_prefix.rs  mod.rs  unescape_html.rs
engine/src/profiled_cleaner/: mod.rs  profile.rs  profile_config.rs  profiled_cleaner_config.rs  profiles.rs  profiles_config.rs  unprofiled_cleaner.rs
engine/src/refs/: flag.rs  mod.rs  var.rs
engine/src/regex/: config.rs  expander.rs  flags.rs  mod.rs  parts.rs
engine/src/task/: lazy_task.rs  mod.rs  task_config.rs  task_state.rs
engine/src/tutorial/: cleaner.rs  debugging.rs  job.rs  mod.rs
engine/src/types/: actions.rs  better_host.rs  better_url.rs  char_matcher.rs  cleaner.rs  conditions.rs  host_part.rs  map.rs  mod.rs  named_partitioning.rs  profiles.rs  set.rs  string_location.rs  string_matcher.rs  (+4 more)
engine/tests/: offline.json  online.json
macros/: Cargo.toml  README.md
macros/src/: edoc.rs  get.rs  lib.rs  suitability.rs  util.rs
my-url-test/: Cargo.toml
my-url-test/src/: idna.rs  main.rs  test.rs  urltestdata.json  util.rs
site/: Cargo.toml  README.md  api.md  server.md  url-cleaner-site-userscript.js  url-cleaner-site.js  userscript.js  userscript.md
site-client/: Cargo.toml  README.md
site-client/src/: get.rs  main.rs
site-types/: Cargo.toml  README.md
site-types/src/: auth.rs  axum.rs  clean.rs  get_domain_suffix.rs  get_host_parts.rs  info.rs  lib.rs  logging.rs  rocket.rs  server.rs  util.rs
site-ws-client/: Cargo.toml  README.md
site-ws-client/src/: main.rs
site/benchmarking/: benchmark.sh
site/src/: clean.rs  clean_ws.rs  cleaner.rs  index.rs  info.rs  keygen.rs  lib.rs  main.rs  profiles.rs  userscript_bench.rs  util.rs
testing/: Cargo.toml
testing/src/: main.rs  offline.json  online.json  test.rs  test_set.rs  tests.rs
url-cleaner-macros/: Cargo.toml  README.md
url-cleaner-macros/src/: error_names.rs  lib.rs  suitability.rs
urlc-tool/: Cargo.toml  README.md  benchmarks.txt  example-urlcs.key
urlc-tool/src/: build.rs  bundled-tests.json  command.rs  compile.rs  doc.rs  domains.rs  filter.rs  foldent.rs  fs.rs  idna.rs  keygen.rs  main.rs  normalize.rs  run.rs  test.rs  util.rs  www.rs
(+1148 files in other folders)
