[package]
name = "url-cleaner"
version = "0.10.0"
edition = "2024"
description = "A CLI tool and library for URL manipulation with a focus on stripping tracking garbage."
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.37", features = ["derive", "unstable-v5"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = "3.12.0"
thiserror = "2.0.12"
url = { version = "2.5.4", features = ["serde"] }
psl = "2.1.106"
form_urlencoded = "1.2.1"
percent-encoding = "2.3.1"
url-cleaner-macros = { version = "0.3.0", path = "./url-cleaner-macros" }
regex   = { optional = true, version = "1.11.1"  }
reqwest = { optional = true, version = "0.12.15", features = ["blocking", "socks", "json", "cookies", "native-tls-alpn"] }
diesel  = { optional = true, version = "2.2.10" , features = ["sqlite"] }
base64  = { optional = true, version = "0.22.1"  }
which   = { optional = true, version = "7.0.3"   }

[build-dependencies]
serde_json = "1.0.140"

[features]
default = ["default-cleaner"]

# Includes default-cleaner.json in the binary and enables all features it requires.
default-cleaner = ["regex", "http", "cache", "base64"]

# Enables [`url_cleaner::glue::regex`].
regex = ["dep:regex"]

# Enables HTTP stuff.
http = ["dep:reqwest"]

# Enables caching various operations.
cache = ['dep:diesel']

# Enables converting to and from base64.
base64 = ["dep:base64"]

# Enables [`url_cleaner::glue::command`].
commands = ["dep:which"]

# Adds `Custom` variants to the main tools which allow using function pointers.
# These cannot be serialized or deserialized and are far more powerful than the `commands` feature, so it's also disabled by default.
custom = []

# Print debug info at various points.
# Exact format unspecified, but should be reasonably easy for humans to parse.
# Tip: do `|& grep -oP '^.{0,200}'` to be able to read it.
debug = []

# https://stackoverflow.com/a/54842093/10720231
[profile.release]
opt-level = 3     # 3 gives +30% size and -20% time compared to 'z'
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[lints.rust]
missing_docs = "warn"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
unused_import_braces = "warn"

[lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
perf = { level = "warn", priority = -1 }
arithmetic_side_effects = "warn"
cargo_common_metadata = "warn"
todo = "warn"
enum_variant_names = "allow"
missing_docs_in_private_items = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
indexing_slicing = "deny"
unit_arg = "allow"
match_like_matches_macro = "allow"
module_inception = "allow"
useless_asref = "allow" # A false positive in src/types/better_url/host_details.rs that cannot be shut up.
