[workspace]
resolver = "2"
members = ["url-cleaner", "url-cleaner-engine", "url-cleaner-site"]

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "deny"
unsafe_code = "forbid"
unused_import_braces = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
perf = { level = "warn", priority = -1 }
arithmetic_side_effects = "warn"
todo = "warn"
enum_variant_names = "allow"
missing_docs_in_private_items = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
indexing_slicing = "deny"
unit_arg = "allow"
match_like_matches_macro = "allow"
module_inception = "allow"
useless_asref = "allow" # A false positive in src/types/better_url/host_details.rs that cannot be shut up.
