[workspace]
resolver = "2"
members = ["engine", "cli", "site-types", "site", "discord-app", "better-url", "benchmarking"]

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "deny"
unused_import_braces = "warn"
unpredictable_function_pointer_comparisons = "allow"

[workspace.lints.clippy]
unwrap_used = "deny"
missing_errors_doc = "deny"
missing_panics_doc = "deny"
missing_safety_doc = "deny"
perf = { level = "warn", priority = -1 }
todo = "warn"
enum_variant_names = "allow"
missing_docs_in_private_items = "warn"
allow_attributes_without_reason = "warn"
dbg_macro = "warn"
indexing_slicing = "deny"
unit_arg = "allow"
match_like_matches_macro = "allow"
module_inception = "allow"
