[package]
name = "better-url"
version = "0.12.0-beta"
edition = "2024"
description = "A better URL crate."
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
url = "2.5.8"
psl = "2.1.183"
thiserror = "2.0.18"
form_urlencoded = "1.2.2"
percent-encoding = "2.3.2"
serde = { optional = true, version = "1.0.228", features = ["derive"] }
idna = "1.1.0"

[lints]
workspace = true

[features]
serde = ["dep:serde", "url/serde"]
