[package]
name = "better-url"
version = "0.12.0-beta"
edition = "2024"
description = "A better URL crate."
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
url = "2.5.8"
psl = "2.1.203"
thiserror = "2.0.18"
serde = { optional = true, version = "1.0.228" }
icu_normalizer = { version = "2.2.0", default-features = false }
# icu_properties = "2.2.0"

[lints]
workspace = true

[features]
serde = ["dep:serde", "url/serde"]
