[package]
name = "better-url"
version = "0.12.0-beta"
edition = "2024"
description = "A better URL crate."
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
psl = "2.1.221"
thiserror = "2.0.19"
serde = { optional = true, version = "1.0.229", features = ["derive"] }
icu_normalizer = { version = "2.2.0", default-features = false, features = ["compiled_data"] }
icu_properties = "2.2.0"
memchr = "2.8.3"

[lints]
workspace = true

[features]
serde = ["dep:serde"]

[dev-dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
