[package]
name = "url-cleaner"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official CLI frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = ["command-line-utilities"]
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
bytes = "1.11.1"
clap = { version = "4.5.60", features = ["derive", "unstable-v5"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["io-std", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }

[features]
default = ["bundled-cleaner"]

bundled-cleaner = [
  "url-cleaner-engine/bundled-cleaner",
  "http",
  "cache"
]

http    = ["url-cleaner-engine/http"]
cache   = ["url-cleaner-engine/cache"]

[lints]
workspace = true
