[package]
name = "url-cleaner-discord-app"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official discord app/bot frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.5.50", features = ["derive", "unstable-v5"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "next" }
regex = "1.12.2"
serde_json = "1.0.145"
serenity = "0.12.4"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }

[features]
default = ["default-cleaner"]

default-cleaner = [
  "url-cleaner-engine/default-cleaner",
  "regex",
  "http",
  "cache",
  "base64"
]

regex   = ["url-cleaner-engine/regex"]
http    = ["url-cleaner-engine/http"]
cache   = ["url-cleaner-engine/cache"]
base64  = ["url-cleaner-engine/base64"]
custom  = ["url-cleaner-engine/custom"]
command = ["url-cleaner-engine/command"]
debug   = ["url-cleaner-engine/debug"]

[lints]
workspace = true
