[package]
name = "url-cleaner-discord"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official discord app/bot frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"
publish = false

[dependencies]
clap = { version = "4.6.4", features = ["derive", "unstable-v5"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next" }
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
bytes = "1.12.1"
regex = "1.13.1"
thiserror = "2.0.19"

[features]
default = ["bundled-cleaner"]

bundled-cleaner = [
  "url-cleaner-engine/bundled-cleaner",
  "http",
  "cache",
]

http  = ["url-cleaner-engine/http"]
cache = ["url-cleaner-engine/cache"]

[lints]
workspace = true
