[package]
name = "url-cleaner-engine"
version = "0.12.0-beta"
edition = "2024"
description = "The engine behind URL Cleaner."
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.15.0"
thiserror = "2.0.17"
url = { version = "2.5.7", features = ["serde"] }
percent-encoding = "2.3.2"
parking_lot = "0.12.5"
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
url-cleaner-macros = { version = "0.12.0-beta", path = "../macros" }
regex          = { optional = true, version = "1.11.3"  }
reqwest        = { optional = true, version = "0.12.23", features = ["blocking", "socks", "json", "cookies", "native-tls-alpn"] }
diesel         = { optional = true, version = "2.3.2" , features = ["sqlite"] }
libsqlite3-sys = { optional = true, version = "0.35.0" , features = ["bundled"] }
rand           = { optional = true, version = "0.9.2"   }
base64         = { optional = true, version = "0.22.1"  }

[dev-dependencies]
criterion = "0.6.0"

[lib]
bench = false

[[bench]]
name = "main"
harness = false

[build-dependencies]
serde_json = "1.0.145"

[features]
default         = ["default-cleaner"]
default-cleaner = ["regex", "http", "cache", "base64"]
regex           = ["dep:regex"]
http            = ["dep:reqwest"]
cache           = ["dep:diesel", "dep:rand", "dep:libsqlite3-sys"]
base64          = ["dep:base64"]
commands        = []
custom          = []
debug           = []

[lints]
workspace = true
