[package]
name = "url-cleaner-engine"
version = "0.12.0-beta"
edition = "2024"
description = "An extremely versatile URL manipulation tool aimed towards cleaning"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_with = "3.16.1"
thiserror = "2.0.18"
url = { version = "2.5.8", features = ["serde"] }
percent-encoding = "2.3.2"
parking_lot = "0.12.5"
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
url-cleaner-macros = { version = "0.12.0-beta", path = "../macros" }
regex    = "1.12.2"
base64   = "0.22.1"
reqwest  = { optional = true, version = "0.12.28", features = ["blocking", "socks", "json"] }
http     = { optional = true, version = "1.4.0" }
rusqlite = { optional = true, version = "0.37.0", features = ["bundled"] }

[features]
default        = ["bundled-cleaner"]
bundled-cleaner= ["http", "cache"]
http           = ["dep:reqwest", "dep:http"]
cache          = ["dep:rusqlite"]
debug          = []

[lints]
workspace = true
