[package]
name = "url-cleaner-macros"
version = "0.11.0"
edition = "2024"
description = "Macros for URL Cleaner"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["extra-traits"] }

[lints]
workspace = true
