[package]
name = "url-cleaner-macros"
version = "0.12.0-beta"
edition = "2024"
description = "Macros for URL Cleaner"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.103"
quote = "1.0.41"
syn = { version = "2.0.108", features = ["extra-traits"] }

[lints]
workspace = true
