[package]
name = "my-url-test"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
url = "2.5.8"

[lints]
workspace = true
