[package]
name = "url-cleaner-site-client"
version = "0.12.0-beta"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
futures-util = "0.3.32"
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["fs", "io-std", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "url"] }
tower-service = "0.3.3"
url = "2.5.8"

[lints]
workspace = true
