[package]
name = "url-cleaner-site-client"
version = "0.12.0-beta"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
bytes = "1.12.1"
clap = { version = "4.6.4", features = ["derive"] }
futures-util = "0.3.33"
http-body-util = "0.1.4"
hyper = { version = "1.11.0", features = ["client", "http1"] }
hyper-tls = "0.6.0"
hyper-util = { version = "0.1.20", features = ["client-legacy", "http1"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["io-std", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "url"] }
url = "2.5.8"

[lints]
workspace = true
