[package]
name = "url-cleaner-site-types"
version = "0.12.0-beta"
edition = "2024"
description = "Types for URL Cleaner Site"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
rocket = { version = "0.5.1", optional = true, features = ["json"] }
serde_json = { version = "1.0.145", optional = true }

[features]
rocket = ["dep:rocket", "dep:serde_json"]

[lints]
workspace = true
