[package]
name = "url-cleaner-site-types"
version = "0.12.0-beta"
edition = "2024"
description = "Types for URL Cleaner Site"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url-cleaner"]
categories = []
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
axum-core = { version = "0.5.6", optional = true }
http = { version = "1.4.0", optional = true }
serde_json = { version = "1.0.149", optional = true }

[features]
axum = ["dep:axum-core", "dep:http", "dep:serde_json"]

[lints]
workspace = true
