[package]
name = "url-cleaner-site-ws-client"
version = "0.12.0-beta"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["fs", "io-std", "macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls", "url"] }
url = "2.5.7"

[lints]
workspace = true
