[package]
name = "url-cleaner-site"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official HTTP server frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = ["web-programming::http-server"]
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
clap = { version = "4.5.53", features = ["derive", "unstable-v5"] }
futures = "0.3.31"
rocket = { version = "0.5.1", features = ["json", "tls", "mtls"] }
serde = "1.0.228"
serde_json = "1.0.146"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
url-cleaner-site-types = { path = "../site-types", version = "0.12.0-beta", features = ["rocket"] }
rocket_ws = "0.1.1"

[features]
default = ["bundled-cleaner"]

bundled-cleaner = [
  "url-cleaner-engine/bundled-cleaner",
  "http",
  "cache"
]

http  = ["url-cleaner-engine/http" ]
cache = ["url-cleaner-engine/cache"]

[lints]
workspace = true
