[package]
name = "url-cleaner-site"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official HTTP server frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = ["web-programming::http-server"]
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["http2", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
bstr = "1.12.1"
clap = { version = "4.5.55", features = ["derive"] }
const-str = { version = "1.0.0", features = ["proc"] }
futures-util = { version = "0.3.31", features = ["io"] }
hyper-util = "0.1.19"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
url-cleaner-site-types = { path = "../site-types", version = "0.12.0-beta", features = ["axum"] }

[features]
default = ["bundled-cleaner"]

bundled-cleaner = [
  "url-cleaner-engine/bundled-cleaner",
  "http",
  "cache"
]

http  = ["url-cleaner-engine/http" ]
cache = ["url-cleaner-engine/cache"]

[lints]
workspace = true
