[package]
name = "url-cleaner-site"
version = "0.12.0-beta"
edition = "2024"
description = "URL Cleaner's official HTTP server frontend"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = ["url", "url-tracking", "privacy", "url-cleaner"]
categories = ["web-programming::http-server"]
license = "AGPL-3.0-or-later"
readme = "README.md"
rust-version = "1.88.0"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.9", features = ["http2", "ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
bstr = "1.12.3"
bytes = "1.12.0"
clap = { version = "4.6.1", features = ["derive"] }
const-str = { version = "1.1.0", features = ["proc"] }
futures-util = { version = "0.3.32", features = ["io"] }
hyper-util = "0.1.20"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["io-std", "macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.18"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta", default-features = false }
url-cleaner-site-types = { path = "../site-types", version = "0.12.0-beta", features = ["axum"] }
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[features]
default = ["bundled-cleaner"]

bundled-cleaner = [
  "url-cleaner-engine/bundled-cleaner",
  "http",
  "cache"
]

http  = ["url-cleaner-engine/http" ]
cache = ["url-cleaner-engine/cache"]

[lints]
workspace = true
