[package]
name = "url-cleaner-testing"
version = "0.12.0-beta"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta" }
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}

[lints]
workspace = true
