[package]
name = "url-cleaner-macros"
version = "0.3.0"
edition = "2024"
description = "Macros for URL Cleaner"
repository = "https://github.com/Scripter17/url-cleaner"
keywords = []
categories = []
license = "AGPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = "2.0.100"
