[package]
name = "urlc-tool"
version = "0.12.0-beta"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.1", features = ["derive", "string"] }
libc = "0.2.186"
num-format = "0.4.4"
regex = "1.13.0"
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde_with = "3.21.0"
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta" }
indexmap = "2.14.0"

[lints]
workspace = true
