[package]
name = "urlc-tool"
version = "0.12.0-beta"
edition = "2024"
publish = false

[dependencies]
clap = { version = "4.6.4", features = ["derive", "string"] }
libc = "0.2.189"
num-format = "0.4.4"
regex = "1.13.1"
reqwest = { version = "0.12.28", features = ["blocking"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.151" }
better-url = { version = "0.12.0-beta", path = "../better-url", features = ["serde"]}
url-cleaner-engine = { path = "../engine", version = "0.12.0-beta" }
indexmap = "2.14.0"
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }

[lints]
workspace = true
